--- a/orm4/orm4/Web.config
+++ b/orm4/orm4/Web.config
@@ -11,6 +11,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms defaultUrl="~/Default.aspx" loginUrl="~/LoginPage.aspx" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -50,6 +53,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="LibNetEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=arthex.database.windows.net,1433;Initial Catalog=sandbox; Integrated Security=False;User Id=sandbox;Password=SO6i7GxI;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="LibNetSQL" connectionString="Server=arthex.database.windows.net,1433; Database=sandbox; User ID=sandbox;Password=SO6i7GxI;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=True; TrustServerCertificate=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -61,4 +65,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
 </configuration>
