--- a/orm4/orm4/Web.config
+++ b/orm4/orm4/Web.config
@@ -12,7 +12,8 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
-      <forms defaultUrl="~/Default.aspx" loginUrl="~/LoginPage.aspx" slidingExpiration="true" timeout="2880"></forms>
+      <forms defaultUrl="~/Default.aspx" loginUrl="~/LoginPage.aspx" slidingExpiration="true" timeout="2880">
+      </forms>
     </authentication>
     <pages>
       <namespaces>
@@ -25,6 +26,32 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <profile defaultProvider="DefaultProfileProvider">
+      <providers>
+        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </profile>
+    <membership defaultProvider="DefaultMembershipProvider">
+      <providers>
+        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="DefaultRoleProvider">
+      <providers>
+        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </roleManager>
+    <!--
+            If you are deploying to a cloud environment that has multiple web server instances,
+            you should change session state mode from "InProc" to "Custom". In addition,
+            change the connection string named "DefaultConnection" to connect to an instance
+            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
+      -->
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+      </providers>
+    </sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -53,7 +80,8 @@
   </system.codedom>
   <connectionStrings>
     <add name="LibNetEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=arthex.database.windows.net,1433;Initial Catalog=sandbox; Integrated Security=False;User Id=sandbox;Password=SO6i7GxI;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="LibNetSQL" connectionString="Server=arthex.database.windows.net,1433; Database=sandbox; User ID=sandbox;Password=SO6i7GxI;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=True; TrustServerCertificate=True;" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Server=arthex.database.windows.net,1433; Database=sandbox; User ID=sandbox;Password=SO6i7GxI;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=True; TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-orm4-20170606144903;Integrated Security=SSPI" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -65,5 +93,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
 </configuration>
