--- a/orm4/orm4/packages.config
+++ b/orm4/orm4/packages.config
@@ -15,6 +15,8 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
