--- a/orm4/orm4/orm4.csproj
+++ b/orm4/orm4/orm4.csproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <Content Include="Authors.aspx" />
     <Content Include="BookList.aspx" />
+    <Content Include="Custom.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -228,6 +229,13 @@
     </Compile>
     <Compile Include="BookList.aspx.designer.cs">
       <DependentUpon>BookList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Custom.aspx.cs">
+      <DependentUpon>Custom.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Custom.aspx.designer.cs">
+      <DependentUpon>Custom.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
